[package]
name = "space-menace"
version = "0.1.0"
authors = ["Kumar Ankur <kmrankur@outlook.com>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", features = ["nightly", "json"] }
serde = "*"
log = "*"
specs-derive = "*"
crossbeam = {version = "0.7", optional = true}

[features]
default = ["metal"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
time_metrics = ["crossbeam"]
